--- a/index.html
+++ b/index.html
@@ -5,66 +5,62 @@
 <body>
 
 <div class="resources">
-    <label>Date:</label> <span id="date"></span>
 
     <label>Population:</label> <span id="population"></span>
 
     <label>Energy:</label> <span id="energy"></span>
 
-    <label>Oxygen:</label> <span id="oxygen"></span>
+    <label>Metals:</label> <span id="metals"></span>
 
-    <label>Materials:</label> <span id="materials"></span>
+    <label>Ice:</label> <span id="ice"></span>
+
+	<label>Oxygen:</label> <span id="oxygen"></span>
 
     <label>Food:</label> <span id="food"></span>
+	
+	<label>Water:</label> <span id="water"></span>
 
     <br>
     <button onclick="awakenPerson()">Awaken</button>
 </div>
 <div class="upgrades">
     <div class="leftpanels">
-        <div class="generators">
+        <div>
             <label>Generators:</label> <span id="generators">1</span> 
             <button onclick="buyGenerator()">Buy Generator</button>
             <label>Generator Cost:</label> <span id="genCost">10</span>
 
         </div>
-        <div class="miners">
-            <label>Miners:</label> <span id="miners">0</span> 
-            <button onclick="buyMiner()">Buy Miner</button>
-            <label>Miner Cost:</label> <span id="minerCost">10</span>
+        <div>
+            <label>Automated Miners:</label> <span id="miners">0</span> 
+            <button onclick="buyMiner()">Buy Automated Miner</button>
+            <label>Cost:</label> <span id="minerCost">10</span>
 
         </div>
-        <div class="lifesupport">
-            <label>Life Support:</label> <span id="lifesupport">0</span> 
-            <button onclick="buyLifeSupport()">Buy Life Support</button>
-            <label>Life Support Cost:</label> <span id="lsCost">10</span>
+        <div>
+            <label>Oxygen Generators:</label> <span id="lifesupport">0</span> 
+            <button onclick="buyLifeSupport()">Buy Oxygen Generator</button>
+            <label>Oxygen Generator Cost:</label> <span id="lsCost">10</span>
 
         </div>
-        <div class="farms">
-            <label>Farms:</label> <span id="farms">0</span> 
-            <button onclick="buyFarm()">Buy Farm</button>
-            <label>Farms Cost:</label> <span id="farmCost">10</span>
+        <div>
+            <label>Hydroponics:</label> <span id="hydroponics">0</span> 
+            <button onclick="buyHydroponics()">Buy Hydroponic Farm</button>
+            <label>Hydroponics Cost:</label> <span id="hydroponicsCost">10</span>
 
         </div>
     </div>
     <div class="rightpanels">
-        <div class="materialstorage">
-            <label>Material Storage:</label> <span id="materialStorage">0</span> 
-            <button onclick="buyMaterialStorage()">Buy Material Storage</button>
-            <label>Material Storage Cost:</label> <span id="materialStorageCost">10</span>
+        <div>
+            <label>Storage:</label> <span id="storage">1</span> 
+            <button onclick="buyStorage()">Buy Storage</button>
+            <label>Storage Cost:</label> <span id="StorageCost">10</span>
 
         </div>
-        <div class="oxygenstorage">
-            <label>Oxygen Storage:</label> <span id="oxygenStorage">0</span> 
-            <button onclick="buyOxygenStorage()">Buy Oxygen Storage</button>
-            <label>Oxygen Storage Cost:</label> <span id="oxygenStorageCost">10</span>
-
-        </div>
-        <div class="foodstorage">
-            <label>Food Storage:</label> <span id="foodStorage">0</span> 
-            <button onclick="buyFoodStorage()">Buy Food Storage</button>
-            <label>Food Storage Cost:</label> <span id="foodStorageCost">10</span>
-
+        <div>
+            <label>Ice Refinery:</label> <span id="refineries">0</span> 
+            <button onclick="buyRefinery()">Buy Ice Refinery</button>
+            <label>Ice Refinery Cost:</label> <span id="IceRefineryCost">10</span>
         </div>
     </div>
 </div>
