Added crew requirements, research
Adding crew requirements and quarters, started adding support for
research

--- a/index.html
+++ b/index.html
@@ -19,34 +19,31 @@
     <label>Food:</label> <span id="food"></span>
 	
 	<label>Water:</label> <span id="water"></span>
-
-    <br>
-    <button onclick="awakenPerson()">Awaken</button>
 </div>
 <div class="upgrades">
     <div class="leftpanels">
         <div>
             <label>Generators:</label> <span id="generators">1</span> 
             <button onclick="buyGenerator()">Buy Generator</button>
-            <label>Generator Cost:</label> <span id="genCost">10</span>
+            <label>Generator Cost:</label> <span id="genCost">25</span>
 
         </div>
         <div>
             <label>Automated Miners:</label> <span id="miners">0</span> 
             <button onclick="buyMiner()">Buy Automated Miner</button>
-            <label>Cost:</label> <span id="minerCost">10</span>
+            <label>Cost:</label> <span id="minerCost">15</span>
 
         </div>
         <div>
             <label>Oxygen Generators:</label> <span id="lifesupport">0</span> 
             <button onclick="buyLifeSupport()">Buy Oxygen Generator</button>
-            <label>Oxygen Generator Cost:</label> <span id="lsCost">10</span>
+            <label>Oxygen Generator Cost:</label> <span id="lsCost">15</span>
 
         </div>
         <div>
             <label>Hydroponics:</label> <span id="hydroponics">0</span> 
             <button onclick="buyHydroponics()">Buy Hydroponic Farm</button>
-            <label>Hydroponics Cost:</label> <span id="hydroponicsCost">10</span>
+            <label>Hydroponics Cost:</label> <span id="hydroponicsCost">15</span>
 
         </div>
     </div>
@@ -54,13 +51,23 @@
         <div>
             <label>Storage:</label> <span id="storage">1</span> 
             <button onclick="buyStorage()">Buy Storage</button>
-            <label>Storage Cost:</label> <span id="StorageCost">10</span>
+            <label>Storage Cost:</label> <span id="StorageCost">50</span>
 
         </div>
         <div>
             <label>Ice Refinery:</label> <span id="refineries">0</span> 
             <button onclick="buyRefinery()">Buy Ice Refinery</button>
-            <label>Ice Refinery Cost:</label> <span id="IceRefineryCost">10</span>
+            <label>Ice Refinery Cost:</label> <span id="IceRefineryCost">15</span>
+        </div>
+        <div>
+            <label>Crew Quarters:</label> <span id="quarters">1</span> 
+            <button onclick="buyCrewQuarters()">Buy Crew Quarters</button>
+            <label>Crew Quarters Cost:</label> <span id="qsCost">10</span>
+        </div>
+        <div>
+            <label>Research Facility:</label> <span id="research">0</span> 
+            <button onclick="">Buy Research Facility</button>
+            <label>Research Facility Cost:</label> <span id="researchCost">100</span>
         </div>
     </div>
 </div>
