Crew fixes, added credits/research points
Fixed crew to work properly. Added credits and research points but
nothing to spend them on...yet.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <label>Food:</label> <span id="food"></span>
 	
 	<label>Water:</label> <span id="water"></span>
+
+	<label>Credits:</label> <span id="credits"></span>
+
+	<label>Research Points:</label> <span id="researchpoints"></span>
 </div>
 <div class="upgrades">
     <div class="leftpanels">
@@ -42,6 +46,11 @@
             <button onclick="buyRefinery()">Buy</button>
             <label>Cost:</label> <span id="IceRefineryCost">15</span>
         </div>
+        <div>
+            <label>Research Facility:</label> <span id="labs">0</span> 
+            <button onclick="buyResearchLab()">Buy</button>
+            <label>Cost:</label> <span id="ResearchLabsCost">100</span>
+        </div>
     </div>
     <div class="rightpanels">
         <div>
@@ -57,13 +66,13 @@
    		<div>
             <label>Crew Quarters:</label> <span id="quarters">1</span> 
             <button onclick="buyCrewQuarters()">Buy</button> 
-            <button onclick="Recruit()">Recruit</button>
+            
             <label>Cost:</label> <span id="qsCost">10</span>
         </div>
         <div>
-            <label>Research Facility:</label> <span id="research">0</span> 
-            <button onclick="">Buy</button>
-            <label>Cost:</label> <span id="researchCost">100</span>
+            <label>Recruit:</label> <span id=""></span> 
+            <button onclick="Recruit()">Recruit</button>
+            <label>Cost:</label> <span id="RecruitCost">0</span>
         </div>
     </div>
 </div>
