Streamlined numbers, added legend

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
 <div class="page-header">
 	<h1>Facilities</h1>
+	<button class="btn btn-default btn-sm"><span class="badge">Owned</span></button> <span class="badge">Cost</span>
 </div>
 	
 <div class="container">
@@ -78,29 +79,29 @@
 	<div class="row">
 		<div class="col-sm-4">
 			<button class="btn btn-default btn-sm" onclick="buyRefinery()">Buy Ice Refinery <span class="badge"id="refineries">0</span></button>
-	        <span class="label label-default">Cost: <span id="IceRefineryCost">15</span></span>
+	        <span class="badge" id="IceRefineryCost">15</span>
 	    </div>
 	    <div class="col-sm-4">
 			<button class="btn btn-default btn-sm" onclick="buyResearchLab()">Buy Research Lab <span class="badge"id="labs">0</span></button>
-	        <span class="label label-default">Cost: <span id="ResearchLabsCost">100</span></span>
+	        <span class="badge" id="ResearchLabsCost">100</span></span>
 	    </div>
 	    <div class="col-sm-4">
 			<button class="btn btn-default btn-sm" onclick="#">Buy Combat <span class="badge"id="combat">0</span></button>
-	        <span class="label label-default">Cost: <span id="combatCost">15</span></span>
+	        <span class="badge" id="combatCost">15</span></span>
 	    </div>
 	</div>
 	<div class="row">
 		<div class="col-sm-4">
 			<button class="btn btn-default btn-sm" onclick="buyGenerator()">Buy Generator <span class="badge" id="generators">1</span></button>
-	        <span class="label label-default">Cost: <span id="genCost">25</span></span>
+	        <span class="badge" id="genCost">25</span></span>
 	    </div>
 	    <div class="col-sm-4">
 			<button class="btn btn-default btn-sm" onclick="buyStorage()">Buy Storage <span class="badge" id="storage">0</span></button>
-	        <span class="label label-default">Cost: <span id="StorageCost">50</span></span>
+	        <span class="badge" id="StorageCost">50</span></span>
 	    </div>
 	    <div class="col-sm-4">
 			<button class="btn btn-default btn-sm" onclick="buyCrewQuarters()">Buy Crew Quarters <span class="badge"id="quarters">1</span></button>
-	        <span class="label label-default">Cost: <span id="qsCost">15</span></span>
+	        <span class="badge" id="qsCost">10</span></span>
 	    </div>
 	</div>
 		
