--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="collapse navbar-collapse" id="tabsNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a data-toggle="collapse" href="#resources">Resources</a></li>
+        <li><a data-toggle="collapse" href="#resources">Resources</a></li>
         <li><a data-toggle="collapse" href="#building">Building</a></li>
         <li><a data-toggle="collapse" href="#research">Research</a></li>
         <li><a data-toggle="collapse" href="#shipconstruction">Ship Construction</a></li> 
@@ -54,12 +54,13 @@
   </div>
 </nav>
 
+
 <div class="container-fluid collapse in" id="resources">
 	<div class="page-header">
 		<h1>Resources</h1>
 	</div>
 
-	<div class="container">
+	<div class="container-fluid">
 
 	   <table class="table table-responsive"> 
 		   <tbody>
@@ -76,6 +77,9 @@
 	   </table> 
 	</div>
 </div>
+
+
+
 
 <div class="container-fluid collapse in" id="building">
 
@@ -156,7 +160,7 @@
 	<div class="page-header">
 		<h1>Ship Construction</h1>
 	</div>
-	<h3>Coming Soon</h3>
+		<h3>Coming Soon</h3>
 </div>
 
 <script type="text/javascript" src="main.js"></script>	
