Testing recruitment costs
Inflated the numbers to test the recruitment costs at higher levels.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 	   <table class="table table-responsive"> 
 		   <tbody>
-		   		<tr id="populationrow"><td>Population:</td><td><span id="population" data-toggle="tooltip" data-placement="right" title="Workers/Free/Maximum"></span></td><td><button class="btn btn-default btn-xs glyphicon glyphicon-user" onclick="Recruit()"> Recruit</button></td></tr>
+		   		<tr id="populationrow"><td>Population:</td><td><span id="population" data-toggle="tooltip" data-placement="right" title="Workers/Free/Maximum"></span></td><td><button class="btn btn-default btn-xs glyphicon glyphicon-user" id="recruitCost" data-toggle="tooltip" title="" onclick="Recruit()"> Recruit</button></td></tr>
 		   		<tr id="energyrow"><td>Energy:</td><td id="energy"></td><td></td></tr>
 		   		<tr id="metalsrow"><td>Metals:</td><td id="metals"></td><td></td></tr>
 		   		<tr id="icerow"><td>Ice:</td><td id="ice"></td><td></td></tr>
