--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="slider/css/slider.css">
+  <script src="slider/js/bootstrap-slider.js"></script>
 </head>
 <body style="overflow-x: hidden;">
 
@@ -33,7 +35,7 @@
   </div>
 </nav>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#tabsNavbar">
@@ -62,11 +64,30 @@
 
 	<div class="container-fluid">
 
-	   <table class="table table-responsive"> 
+	   <table class="table table-bordered table-responsive"> 
 		   <tbody>
-		   		<tr id="populationrow"><td>Population:</td><td><span id="population" data-toggle="tooltip" data-placement="right" title="Workers/Free/Maximum"></span></td><td><button class="btn btn-default btn-xs glyphicon glyphicon-user" id="recruitCost" data-toggle="tooltip" title="" onclick="Recruit()"> Recruit</button></td></tr>
+		   		<tr id="populationrow"><td><label>Population:</label></td><td><span id="population" data-toggle="tooltip" data-placement="right" title="Workers/Free/Maximum"></span></td><td>
+		   		<button class="btn btn-default btn-xs glyphicon glyphicon-user" id="recruitCost" data-toggle="collapse" data-target="#recruitCrew"> Recruit</button>
+		   		<div class="collapse" id="recruitCrew">
+		   			<button class="btn btn-default btn-xs glyphicon glyphicon-user" id="recruitCostx1" data-toggle="tooltip" title="" onclick="Recruit(1)">x1</button>
+		   			<button class="btn btn-default btn-xs glyphicon glyphicon-user" id="recruitCostx10" data-toggle="tooltip" title="" onclick="Recruit(10)">x10</button>
+		   			<button class="btn btn-default btn-xs glyphicon glyphicon-user" id="recruitCostx100" data-toggle="tooltip" title="" onclick="Recruit(100)">x100</button>
+				</div>
+		   		</td></tr>
 		   		<tr id="energyrow"><td>Energy:</td><td id="energy"></td><td></td></tr>
-		   		<tr id="metalsrow"><td>Metals:</td><td id="metals"></td><td></td></tr>
+		   		<tr id="metalsrow">
+		   		<td>
+		   		<div class="row">
+		   			<div class="col-sm-2 col-md-2 col-lg-2"><label>Metals: </label></div>
+		   			<div class="col-sm-10 col-md-10 col-lg-10">
+			   		 	<div class="progress">
+		  					<div id="metalsprogressbar" class="progress-bar progress-bar-striped progress-bar-success active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="50" style="width:70%">
+		    					<span id="metals"></span>
+		  					</div>
+						</div>
+					</div>
+				</div>
+		   		</td><td></td></tr>
 		   		<tr id="icerow"><td>Ice:</td><td id="ice"></td><td></td></tr>
 		   		<tr id="oxygenrow"><td>Oxygen:</td><td id="oxygen"></td><td></td></tr>
 		   		<tr id="foodrow"><td>Food:</td><td id="food"></td><td></td></tr>
@@ -91,44 +112,88 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4">
-				<button class="btn btn-default btn-sm" onclick="buyMiner()">Buy Automated Miner <span class="badge"id="miners">0</span></button>
-		        <span class="badge" id="minerCost" data-toggle="tooltip" data-placement="top" title="Cost">15</span>
+				<button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#buyMiners">Buy Autominers <span class="badge"id="miners">0</span></button>
+				<br />
+				<div class="collapse" id="buyMiners">	
+					<button class="btn btn-default btn-sm" onclick="buyMiner(1)">x1 <span class="badge" id="minerCostx1">15</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyMiner(10)">x10 <span class="badge" id="minerCostx10">15</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyMiner(100)">x100 <span class="badge" id="minerCostx100">15</span></button>
+		        </div>
 		    </div>
 		    <div class="col-sm-4">
-				<button class="btn btn-default btn-sm" onclick="buyLifeSupport()">Buy Oxygen Generator <span class="badge"id="lifesupport">0</span></button>
-		        <span class="badge" id="lsCost">15</span>
+				<button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#buyOxygen">Buy Oxygen Generator <span class="badge"id="lifesupport">0</span></button>
+				<br />
+				<div class="collapse" id="buyOxygen">	
+					<button class="btn btn-default btn-sm" onclick="buyLifeSupport(1)">x1 <span class="badge" id="lsCostx1">15</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyLifeSupport(10)">x10 <span class="badge" id="lsCostx10">15</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyLifeSupport(100)">x100 <span class="badge" id="lsCostx100">15</span></button>
+		        </div>
 		    </div>
 		    <div class="col-sm-4">
-				<button class="btn btn-default btn-sm" onclick="buyHydroponics()">Buy Hydroponic Farm <span class="badge"id="hydroponics">0</span></button>
-		        <span class="badge" id="hydroponicsCost">15</span>
+				<button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#buyHydroponics">Buy Hydroponics <span class="badge"id="hydroponics">0</span></button>
+				<br />
+				<div class="collapse" id="buyHydroponics">	
+					<button class="btn btn-default btn-sm" onclick="buyHydroponics(1)">x1 <span class="badge" id="hydroponicsCostx1">15</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyHydroponics(10)">x10 <span class="badge" id="hydroponicsCostx10">15</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyHydroponics(100)">x100 <span class="badge" id="hydroponicsCostx100">15</span></button>
+		        </div>
 		    </div>
 		</div>
 		<div class="row">
 			<div class="col-sm-4">
-				<button class="btn btn-default btn-sm" onclick="buyRefinery()">Buy Ice Refinery <span class="badge"id="refineries">0</span></button>
-		        <span class="badge" id="IceRefineryCost">15</span>
+				<button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#buyRefineries">Buy Ice Refinery <span class="badge"id="refineries">0</span></button>
+				<br />
+				<div class="collapse" id="buyRefineries">	
+					<button class="btn btn-default btn-sm" onclick="buyRefinery(1)">x1 <span class="badge" id="refCostx1">15</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyRefinery(10)">x10 <span class="badge" id="refCostx10">15</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyRefinery(100)">x100 <span class="badge" id="refCostx100">15</span></button>
+		        </div>
 		    </div>
 		    <div class="col-sm-4">
-				<button class="btn btn-default btn-sm" onclick="buyResearchLab()">Buy Research Lab <span class="badge"id="labs">0</span></button>
-		        <span class="badge" id="ResearchLabsCost">100</span></span>
+				<button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#buyLabs">Buy Research Lab <span class="badge"id="labs">0</span></button>
+				<br />
+				<div class="collapse" id="buyLabs">	
+					<button class="btn btn-default btn-sm" onclick="buyResearchLab(1)">x1 <span class="badge" id="ResearchLabsCostx1">100</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyResearchLab(1)">x10 <span class="badge" id="ResearchLabsCostx10">100</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyResearchLab(1)">x100 <span class="badge" id="ResearchLabsCostx100">100</span></button>
+		        </div>
 		    </div>
 		    <div class="col-sm-4">
 				<button class="btn btn-default btn-sm" onclick="#">Buy Combat <span class="badge"id="combat">0</span></button>
-		        <span class="badge" id="combatCost">15</span></span>
+		        <span class="badge" id="combatCost">N/A</span></span>
 		    </div>
 		</div>
 		<div class="row">
 			<div class="col-sm-4">
-				<button class="btn btn-default btn-sm" onclick="buyGenerator()">Buy Generator <span class="badge" id="generators">1</span></button>
-		        <span class="badge" id="genCost">25</span></span>
+			
+				<button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#buyGenerators">Buy Generator <span class="badge" id="generators">1</span></button>
+				<br />
+				<div class="collapse" id="buyGenerators">
+					<button class="btn btn-default btn-sm" onclick="buyGenerator(1)">x1 <span class="badge" id="genCostx1">25</span></button>
+			        <button class="btn btn-default btn-sm" onclick="buyGenerator(10)">x10 <span class="badge" id="genCostx10">250</span></button>
+			        <button class="btn btn-default btn-sm" onclick="buyGenerator(100)">x100 <span class="badge" id="genCostx100">2500</span></button>
+		        </div>
+		        
 		    </div>
 		    <div class="col-sm-4">
-				<button class="btn btn-default btn-sm" onclick="buyStorage()">Buy Storage <span class="badge" id="storage">0</span></button>
-		        <span class="badge" id="StorageCost">50</span></span>
+		    <button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#buyStorage">Buy Storage <span class="badge" id="storage">0</span></button>
+		    	<br />
+
+		    	<div class="collapse" id="buyStorage">
+				<button class="btn btn-default btn-sm" onclick="buyStorage(1)">x1 <span class="badge" id="StorageCostx1">50</span></span></button>
+			        <button class="btn btn-default btn-sm" onclick="buyStorage(10)">x10 <span class="badge" id="StorageCostx10">500</span></span></button>
+			        <button class="btn btn-default btn-sm" onclick="buyStorage(100)">x100 <span class="badge" id="StorageCostx100">5000</span></span></button>
+			    </div>
+		        
 		    </div>
 		    <div class="col-sm-4">
-				<button class="btn btn-default btn-sm" onclick="buyCrewQuarters()">Buy Crew Quarters <span class="badge"id="quarters">1</span></button>
-		        <span class="badge" id="qsCost">10</span></span>
+		    <button type="button" class="btn btn-default btn-sm" data-toggle="collapse" data-target="#buyQuarters">Buy Crew Quarters <span class="badge"id="quarters">1</span></button>
+		    <br />
+				<div class="collapse" id="buyQuarters">
+					<button class="btn btn-default btn-sm" onclick="buyCrewQuarters(1)">x1 <span class="badge" id="qsCostx1">10</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyCrewQuarters(10)">x10 <span class="badge" id="qsCostx10">100</span></button>
+					<button class="btn btn-default btn-sm" onclick="buyCrewQuarters(100)">x100 <span class="badge" id="qsCostx100">1000</span></button>
+		        </div>
 		    </div>
 		</div>
 			
@@ -160,14 +225,72 @@
 	<div class="page-header">
 		<h1>Ship Construction</h1>
 	</div>
-		<h3>Coming Soon</h3>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-6 col-md-6 col-lg-6">
+				<div class="panel-group" id="shipConstructionAccordion">
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h4 class="panel-title">
+								<a class="list-group-item" data-toggle="collapse" data-parent="#shipConstructionAccordion" href="#smallShipConstruction">Construct Small Spaceship</a>
+							</h4>
+						</div>
+						<div id="smallShipConstruction" class="panel-collapse collapse">
+							<div class="panel-body">
+								<ul class="list-group">
+									<li class="list-group-item"><span class="badge">1</span> Autominers: <div class="slider slider-horizontal"></div></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h4 class="panel-title">
+								<a class="list-group-item" data-toggle="collapse" data-parent="#shipConstructionAccordion" href="#mediumShipConstruction">Construct Medium Spaceship</a>
+							</h4>
+						</div>
+						<div id="mediumShipConstruction" class="panel-collapse collapse">
+							<div class="panel-body">Medium Ship Construction Coming Soon!</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<h4 class="panel-title">
+								<a class="list-group-item" data-toggle="collapse" data-parent="#shipConstructionAccordion" href="#largeShipConstruction">Construct Large Spaceship</a>
+							</h4>
+						</div>
+						<div id="largeShipConstruction" class="panel-collapse collapse">
+							<div class="panel-body">Large Ship Construction Coming Soon!</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4 class="panel-title">Ship List</h4>
+					</div>
+					<div class="panel-body">
+						<ul class="list-group">
+							<li class="list-group-item"><span class="badge">5000/5000</span> Mother Ship </li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+		
 </div>
 
 <script type="text/javascript" src="main.js"></script>	
 <script>
+
 $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip(); 
+$('.slider').slider();
 });
+
+
 </script>
 </body>
 </html>
