Changed recruit cost

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
 </div>
 
-<div class="container-fluid collapse in" id="shipconstruction">
+<div class="container-fluid collapse" id="shipconstruction">
 	<div class="page-header">
 		<h1>Ship Construction</h1>
 	</div>
@@ -315,7 +315,7 @@
 								<a class="list-group-item" data-toggle="collapse" data-parent="#shipConstructionAccordion" href="#smallShipConstruction">Construct Small Spaceship</a>
 							</h4>
 						</div>
-						<div id="smallShipConstruction" class="panel-collapse collapse in">
+						<div id="smallShipConstruction" class="panel-collapse collapse">
 							<div class="panel-body">
 								<ul class="list-group">
 									<li class="list-group-item"><label>Name:</label> <input id="smallSName"type="text"></li>
